<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout="@layout/activity_main" >

    <PreferenceCategory android:title="AnimiServer" >
        <EditTextPreference
            android:defaultValue="188.6.164.115"
            android:key="@string/animiserverIP"
            android:title="@string/animiserverIP" />
        <EditTextPreference
            android:defaultValue="8001"
            android:key="@string/animiserverPort"
            android:title="@string/animiserverPort" />
        <EditTextPreference
            android:defaultValue="5000"
            android:key="@string/animiserverTimeout"
            android:title="@string/animiserverTimeout" />
    </PreferenceCategory>

</PreferenceScreen>

